# hermes-context-compressor

./: LICENSE  README.md  pyproject.toml
hermes_context_compressor/: __init__.py  benchmark.py  compressor.py  config.py  pattern_detector.py  scorer.py
plugins/context_engine/ironin_compressor/: __init__.py  plugin.yaml
tests/: test_config.py  test_pattern_detector.py  test_scorer.py
