[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-context-compressor"
version = "0.1.0"
description = "Smart context compressor plugin for Hermes Agent with heuristic turn scoring, retry loop detection, and configurable importance thresholds"
authors = [{name = "Cyprian Kowalczyk"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["hermes_context_compressor*"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-v -q"
testpaths = ["tests"]
